horizontal scroll was fixed

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -1,8 +1,9 @@
 
-.main {
+.main__container {
   width: 944px;
-  padding: 50px calc((100vw - 944px) / 2) ;
   display: flex;
+  padding: 50px 40px;
+  align-items: center;
   flex-wrap: wrap;
   margin: 0 auto;
 }
